--- a/PA1_template.html
+++ b/PA1_template.html
@@ -424,7 +424,7 @@ Median_Q4 = median(sum_Q4$Total)</code></pre>
 <li>The <strong>mean</strong> total number of steps taken per day is 10766.1886792.</li>
 <li>The <strong>median</strong> total number of steps taken per day is 10766.1886792.</li>
 </ul>
-<p>Filling in all of the missing values with the mean for that day has almost no effect on mean and</p>
+<p>Filling in all of the missing values with the mean for that day has almost no effect on mean and median</p>
 </div>
 <div id="are-there-differences-in-activity-patterns-between-weekdays-and-weekends" class="section level2">
 <h2>Are there differences in activity patterns between weekdays and weekends?</h2>
